# project-socora

./: PROMPTS.md  README.md  main.py  pyproject.toml
.containers/opensearch/: .env  docker-compose.yml
.containers/tika/: docker-compose.yml  run.bat  run.sh  stop.bat  stop.sh
scripts/: extract_links_run.bat  extract_links_run.sh  find_empty_content_md.py  find_empty_content_md.sh  normalize_run.bat  normalize_run.sh  run_cresskill.bat
scripts/crawler/: extract_links_run.bat  extract_links_run.sh  find_empty_content_md.bat  find_empty_content_md.py  find_empty_content_md.sh  normalize_run.bat  normalize_run.sh  run_cresskill.bat
socora-crawler/: README.md  pyproject.toml  scrapy.cfg
socora-crawler/socora_crawler/: __init__.py  aggregate_links.py  extract_links.py  pipelines.py  settings.py
socora-crawler/socora_crawler/extractors/: __init__.py
socora-crawler/socora_crawler/spiders/: __init__.py
socora-indexer/: README.md  main.py  pyproject.toml
socora-indexer/socora_indexer/: __init__.py  cli_agent.py  cli_agent_ar.py  content_indexer.py  generate_embedding.py  opensearch_utils.py
socora_crawler/: extensions.py  extract_links.py  normalize_content.py  normalize_text_content.py  pipelines.py  settings.py  tika_client.py  xpath_evaluator.js
socora_crawler/extractors/: framework.py
socora_crawler/extractors/cresskill/: __init__.py  meeting_documents.py
socora_crawler/spiders/: universal.py
