[project]
name = "project-socora"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "scrapy>=2.13.3",
    "scrapy-playwright>=0.0.44",
    "playwright>=1.55.0",
    "httpx>=0.27",
]

[tool.uv]
# Use uv-managed virtualenv in .venv and respect .python-version (3.13)
package = false
