[project]
name = "socora-crawler"
version = "0.1.0"
description = "Socora web crawler"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "scrapy>=2.13.3",
    "scrapy-playwright>=0.0.44",
    "playwright>=1.55.0",
    "httpx>=0.27",
    # TLS and identity verification dependencies used by Twisted/Scrapy
    "service-identity>=24.1.0",
    "pyopenssl>=24.2.1",
    # Cryptography is required by service-identity/pyOpenSSL and some platforms
    # do not preinstall it. Pin to a version with Python 3.13 wheels.
    "cryptography>=43.0.0",
]

[tool.uv]
# Use uv-managed virtualenv in .venv and respect .python-version (3.13)
package = false
